--- a/src/components/ChatsRoom/chatsRoom.css
+++ b/src/components/ChatsRoom/chatsRoom.css
@@ -6,17 +6,6 @@
   margin: 0 0 30px 0;
   cursor: pointer;
 }
-.room-container::-webkit-scrollbar {
-  width: 0.25rem;
-}
-
-.room-container::-webkit-scrollbar-track {
-  background: #1e1e24;
-}
-
-.room-container::-webkit-scrollbar-thumb {
-  background: #6649b8;
-}
 .room-name {
   text-align: right;
   font-size: 25px;
@@ -26,4 +15,7 @@
 }
 .current-room {
   border: 1px solid black;
+}
+.room-last-msg {
+  padding-left: 5px;
 }
