--- a/src/components/RoomSetting/roomSetting.css
+++ b/src/components/RoomSetting/roomSetting.css
@@ -19,11 +19,21 @@ input.form-control.input-desc {
   width: 10vw;
   margin-right: 10px;
 }
+.partic-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: flex-start;
+}
 .participants {
-  position: relative;
-  top: 9vh;
-  right: 29vw;
-  height: 6vh;
+  margin: 3vh 0 0 12vw;
+  width: 5vw;
+  height: 5vh;
+}
+.number-input {
+  width: 10vw;
+  height: 5vh;
+  margin-top: 3vh;
 }
 #inputGroupSelect04 {
   min-width: 5vw;
@@ -31,9 +41,9 @@ input.form-control.input-desc {
   margin: 3vh 10px 0 16vw;
 }
 .btn-outline-warning {
-  min-width: 10%;
-  margin-top: 3vh;
-  height: 6vh;
+  min-width: 5vw;
+  height: 5vh;
+  margin: 3vh 0 0 1vw;
 }
 #partic-email-1,
 #partic-email-2,
